# defiant

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md
doc/: er.dot
src/defiant/: Cargo.toml  README.md
src/defiant-cli/: Cargo.toml  README.md
src/defiant-cli/src/: main.rs
src/defiant-web/: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml
src/defiant-web/dst/: index.html  style.css
src/defiant-web/migration/20230820084119_create_bookmarks/: down.sql  up.sql
src/defiant-web/migration/20231015001636_create_users/: down.sql  up.sql
src/defiant-web/migration/20231015001930_add_user_id_to_bookmarks/: down.sql  up.sql
src/defiant-web/src/: Defiant.elm  response.rs  schema.rs
src/defiant/src/: lib.rs
src/defiant/test/data/: invalid.toml  sample.toml
