[package]
version = "0.1.0"
name = "defiant-web"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = ""
repository = "https://gitlab.com/grauwoelfchen/defiant"
homepage = "https://gitlab.com/grauwoelfchen/defiant"
documentation = "https://gitlab.com/grauwoelfchen/defiant"
license = "AGPL-3.0-or-later"
readme = "README.md"
categories = ["web-programming::http-server", "text-processing"]
keywords = []
edition = "2021"
exclude = [
  "elm-stuff",
  "test/*"
]

[[bin]]
name = "defiant-server"
doc = false
path = "src/bin/server.rs"

[dependencies]
defiant = { path = "../defiant" }
dotenvy = "0.15.7"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

[dependencies.diesel]
version = "2.1.0"
default-features = false
features = ["postgres"]
