[package]
version = "0.1.0"
name = "defiant"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = ""
repository = "https://gitlab.com/grauwoelfchen/defiant"
homepage = "https://gitlab.com/grauwoelfchen/defiant"
documentation = "https://gitlab.com/grauwoelfchen/defiant"
license = "GPL-3.0-or-later"
readme = "README.md"
categories = ["command-line-interface", "text-processing"]
keywords = ["text"]
edition = "2021"
exclude = [
  "test/*"
]

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
